integrated modal in index and buton

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -17,15 +17,15 @@
     <title>Add Card</title>
   </head>
   <body>
-    <button onclick="buttonClickOn()">click here</button>
+    <!-- <button onclick="buttonClickOn()">click here</button> -->
     <div class="container" id="card-wrapper">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col">
           <div class="Main-heading justify-content-center">
             <h1>todo</h1>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col justify-content-center d-flex">
           <div class="card-input-wrapper">
