--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -1,12 +1,13 @@
 <link rel="stylesheet" href="/feat/floatingbutton/button.css" />
 <script src="/feat/floatingbutton/button.js"></script>
+<script src="/feat/add-card/js/input-card.js"></script>
 <!-- chat open -->
 <div class="chat-bar-open" id="chat-open">
   <button
     id="chat-open-button"
     type="button"
     class="collapsible close"
-    onclick="chatOpen()"
+    onclick="buttonClickOn() ;chatOpen() "
   >
     +
   </button>
