--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="row justify-content-center">
         <h1 class="text-center col-md-12">todo.</h1>
         <!-- Injecting Search Box -->
+        <div id="add-card"></div>
         <div id="searchbox" class="col-md-12 px-4 mt-5"></div>
         <div id="list"></div>
         <div id="floatingbutton"></div>
@@ -29,6 +30,7 @@
       $("#searchbox").load("./feat/search/search.html");
       $("#list").load("./feat/listview/view.html");
       $("#floatingbutton").load("./feat/floatingbutton/button.html");
+      $("#add-card").load("./feat/add-card/add-card.html");
     });
   </script>
 </html>
