--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -17,25 +17,15 @@
     <title>Add Card</title>
   </head>
   <body>
-<<<<<<< HEAD
     <!-- <button onclick="buttonClickOn()">click here</button> -->
     <div class="container" id="card-wrapper">
       <!-- <div class="row">
-=======
-    <button onclick="buttonClickOn()">click here</button>
-    <div class="container" id="card-wrapper">
-      <div class="row">
->>>>>>> eba01891e02e130ccb2c2a79e6628dcf76f7a983
         <div class="col">
           <div class="Main-heading justify-content-center">
             <h1>todo</h1>
           </div>
         </div>
-<<<<<<< HEAD
       </div> -->
-=======
-      </div>
->>>>>>> eba01891e02e130ccb2c2a79e6628dcf76f7a983
       <div class="row">
         <div class="col justify-content-center d-flex">
           <div class="card-input-wrapper">
@@ -64,7 +54,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-end p-3 add-button">
-                  <button class="Add" onclick="add()">Add</button>
+                  <button class="Add" id="add" disabled onclick="add()">Add</button>
                 </div>
               </form>
             </div>
