--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="add-card"></div>
         <div id="searchbox" class="col-md-12 px-4 mt-5"></div>
         <div id="list"></div>
-        <div id="floatingbutton"></div>
+        <div id="floatingbutton1"></div>
       </div>
     </div>
   </body>
@@ -29,8 +29,8 @@
     $(document).ready(function () {
       $("#searchbox").load("./feat/search/search.html");
       $("#list").load("./feat/listview/view.html");
-      $("#floatingbutton").load("./feat/floatingbutton/button.html");
-      $("#add-card").load("./feat/add-card/add-card.html");
+      $("#floatingbutton1").load("./feat/floatingbutton/button.html");
+      $("#add-card").load("./feat/add-card/add-card.html"); 
     });
   </script>
 </html>
