fix: Change Button Behaviour

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -54,7 +54,9 @@
                   </div>
                 </div>
                 <div class="row justify-content-end p-3 add-button">
-                  <button class="Add" id="add" disabled onclick="add()">Add</button>
+                  <button class="Add" id="add" disabled onclick="addItem()">
+                    Add
+                  </button>
                 </div>
               </form>
             </div>
