--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -2,24 +2,13 @@
 <script src="/feat/floatingbutton/button.js"></script>
 <script src="/feat/add-card/js/input-card.js"></script>
 <!-- chat open -->
-<div class="chat-bar-open" id="chat-open">
+<div class="justify-content-center navbar fixed-bottom navbar-expand-lg">
   <button
     id="chat-open-button"
     type="button"
-    class="collapsible close"
+    class="btn btn-outline-secondary btn-lg btn-block mb-4"
     onclick="buttonClickOn() ;chatOpen() "
   >
-    + Add
-  </button>
-</div>
-<!-- chat close -->
-<div class="chat-bar-close" id="chat-close">
-  <button
-    id="chat-close-button"
-    type="button"
-    class="collapsible close"
-    onclick="chatClose()"
-  >
-    x
+    Add
   </button>
 </div>
