feat: Add Item to Object Array

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -13,6 +13,7 @@
     />
 
     <!-- script  -->
+    <script src="/feat/store-item/store.js"></script>
     <script src="/feat/add-card/js/input-card.js"></script>
     <title>Add Card</title>
   </head>
