feat: Display the stored items dynamically

--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -1,13 +1,14 @@
 <link rel="stylesheet" href="/feat/floatingbutton/button.css" />
-<script src="/feat/floatingbutton/button.js"></script>
 <script src="/feat/add-card/js/input-card.js"></script>
 <!-- chat open -->
-<div class="justify-content-center navbar fixed-bottom navbar-expand-lg">
+<div
+  class="justify-content-center navbar fixed-bottom navbar-expand-lg bg-white"
+>
   <button
     id="chat-open-button"
     type="button"
-    class="btn btn-outline-secondary btn-lg btn-block mb-4"
-    onclick="buttonClickOn() ;chatOpen() "
+    class="btn btn-outline-secondary btn-lg btn-block mb-2"
+    onclick="buttonClickOn()"
   >
     Add
   </button>
