--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -1,41 +1,4 @@
-<div class="container mt-5">
-  <div class="row">
-    <!-- Card 1 -->
-    <div class="col-md-6 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 1</h5>
-          <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Card 2 -->
-    <div class="col-md-6 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 2</h5>
-          <p class="card-text">
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-6 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card 3</h5>
-          <p class="card-text">
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div id="cardContainer" class="container mt-5 mb-5">
+  <div class="row"></div>
 </div>
+<script src="/feat/listview/view.js"></script>
