--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -9,6 +9,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
+          <button>del</button>
         </div>
       </div>
     </div>
@@ -22,6 +23,8 @@
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat.
           </p>
+          <button onclick="deleteObject(todoArray[0].title)">del</button>
+
         </div>
       </div>
     </div>
@@ -34,6 +37,8 @@
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat.
           </p>
+          <button>del</button>
+
         </div>
       </div>
     </div>
