--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -53,6 +53,7 @@
                       rows="10"
                     ></textarea>
                   </div>
+                  <button></button>
                 </div>
                 <div class="row justify-content-end p-3 add-button">
                   <button class="Add" id="add" disabled onclick="addItem()">
