--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <script src="/feat/store-item/store.js"></script>
   </head>
   <body>
     <div class="container mt-5">
