--- a/feat/search/search.html
+++ b/feat/search/search.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/feat/search/search.css" />
+<script src="/feat/search/search.js"></script>
 <form action="#" class="searchbox">
-  <input type="text" placeholder="Type to search..." name="search" />
+  <input type="text" placeholder="Type to search..." name="search" id="search" />
 </form>
