--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <script src="/feat/store-item/store.js"></script>
+    <!-- <script src="/feat/multiple-selection/selection.js"></script> -->
   </head>
   <body>
     <div class="container mt-5">
