--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -1,4 +1,5 @@
 <div id="cardContainer" class="container mt-5 mb-5">
   <div class="row"></div>
 </div>
+<script src="/feat/multiple-selection/selection.js"></script>
 <script src="/feat/listview/view.js"></script>
