added modal bg blur

--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -8,7 +8,7 @@
     id="chat-open-button"
     type="button"
     class="btn btn-outline-secondary btn-lg btn-block mb-2"
-    onclick="buttonClickOn()"
+    onclick="buttonClickOn();backgroundBlurOn()"
   >
     Add
   </button>
