--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -17,16 +17,8 @@
     <script src="/feat/add-card/js/input-card.js"></script>
     <title>Add Card</title>
   </head>
-  <body>
-    <!-- <button onclick="buttonClickOn()">click here</button> -->
+  <body>  
     <div class="container" id="card-wrapper">
-      <!-- <div class="row">
-        <div class="col">
-          <div class="Main-heading justify-content-center">
-            <h1>todo</h1>
-          </div>
-        </div>
-      </div> -->
       <div class="row">
         <div class="col justify-content-center d-flex">
           <div class="card-input-wrapper">
@@ -35,7 +27,7 @@
                 <div class="row">
                   <div class="todo-title col">Title</div>
                   <div class="col text-end close">
-                    <button onclick="buttonClickOff()">+</button>
+                    <button onclick="buttonClickOff(); backgroundBlurOff()">+</button>
                   </div>
                 </div>
                 <div class="row">
@@ -64,9 +56,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row justify-content-end plus-button my-5 mr-2">
-        <button>+</button>
-      </div> -->
     </div>
   </body>
 </html>
