feat: Redesign Homepage

--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -1,13 +1,11 @@
 <link rel="stylesheet" href="/feat/floatingbutton/button.css" />
 <script src="/feat/add-card/js/input-card.js"></script>
 <!-- chat open -->
-<div
-  class="justify-content-center navbar fixed-bottom navbar-expand-lg bg-white"
->
+<div class="justify-content-center navbar fixed-bottom navbar-expand-lg">
   <button
-    id="chat-open-button"
+    id="actionButton"
     type="button"
-    class="btn btn-outline-secondary btn-lg btn-block mb-2"
+    class="col-md-1 btn btn-outline-secondary btn-lg btn-block mb-2"
     onclick="buttonClickOn()"
   >
     Add
