--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/feat/listview/view.css" />
 <div id="cardContainer" class="container mt-5 mb-5">
   <div class="row"></div>
 </div>
