ui fix add card modal

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -17,7 +17,7 @@
     <script src="/feat/add-card/js/input-card.js"></script>
     <title>Add Card</title>
   </head>
-  <body>  
+  <body>
     <div class="container" id="card-wrapper">
       <div class="row">
         <div class="col justify-content-center d-flex">
@@ -25,9 +25,11 @@
             <div class="container">
               <form id="form" action="">
                 <div class="row">
-                  <div class="todo-title col">Title</div>
+                  <div class="todo-title col">Title*</div>
                   <div class="col text-end close">
-                    <button onclick="buttonClickOff(); backgroundBlurOff()">+</button>
+                    <button onclick="buttonClickOff(); backgroundBlurOff()">
+                      +
+                    </button>
                   </div>
                 </div>
                 <div class="row">
