fixed ui and functionality in modal

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -25,7 +25,9 @@
             <div class="container">
               <form id="form" action="">
                 <div class="row">
-                  <div class="todo-title col">Title*</div>
+                  <div class="todo-title col">
+                    Title<font style="color: red">*</font>
+                  </div>
                   <div class="col text-end close">
                     <button onclick="modalOffButton(); backgroundBlurOff()">
                       +
