--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -26,7 +26,7 @@
               <form id="form" action="">
                 <div class="row">
                   <div class="todo-title col">
-                    Title<font style="color: red">*</font>
+                    Title <font style="color: red;">*</font>
                   </div>
                   <div class="col text-end close">
                     <button onclick="modalOffButton(); backgroundBlurOff()">
