chaged todo title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Bootstrap Static Header -->
       <div class="jumbotron bg-cover text-white border border-white">
         <div class="container py-5 text-center">
-          <h1 class="display-4 font-weight-bold col-md-12 text-black">todo.</h1>
+          <h1 class="display-4 font-weight-bold col-md-12 text-black">Todo</h1>
           <div id="searchbox" class="col-md-12 px-4 mt-5"></div>
         </div>
       </div>
