fix: Change to list layout

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     <header>
       <!-- Bootstrap Static Header -->
       <div class="jumbotron bg-cover text-white border border-white">
-        <div class="container py-5 text-center">
+        <div class="container pt-5 pb-4 text-center">
           <h1 class="display-4 font-weight-bold col-md-12 text-black">todo.</h1>
-          <div id="searchbox" class="col-md-12 px-4 mt-5"></div>
+          <div id="searchbox" class="col-md-12 ps-3 pe-3 mt-5"></div>
+          <div id="floatingbutton1"></div>
         </div>
       </div>
     </header>
@@ -33,7 +34,6 @@
     <div class="container">
       <div class="row justify-content-center">
         <div id="list"></div>
-        <div id="floatingbutton1"></div>
       </div>
     </div>
   </body>
