--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -1,11 +1,20 @@
 <link rel="stylesheet" href="/feat/floatingbutton/button.css" />
 <script src="/feat/add-card/js/input-card.js"></script>
 <!-- chat open -->
-<div class="justify-content-center navbar fixed-bottom navbar-expand-lg">
+<div class="d-flex justify-content-end m-3 mb-0">
   <button
     id="actionButton"
     type="button"
-    class="col-md-1 btn btn-outline-secondary btn-lg btn-block mb-2"
+    disabled
+    class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
+    onclick="buttonClickOn()"
+  >
+    Delete
+  </button>
+  <button
+    id="actionButton"
+    type="button"
+    class="col-md-1 btn btn-outline-secondary btn-lg btn-block"
     onclick="buttonClickOn()"
   >
     Add
