fix: Make Header Sticky

--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -9,6 +9,15 @@
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
     onclick="buttonClickOn()"
   >
+    Edit
+  </button>
+  <button
+    id="actionButton"
+    type="button"
+    disabled
+    class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
+    onclick="buttonClickOn()"
+  >
     Delete
   </button>
   <button
