--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
     />
     <script src="/feat/store-item/store.js"></script>
   </head>
-  <body style="background: linear-gradient(#ffefba, #ffffff); height: 100vh">
+  <body style="background-color: #ffefba">
     <div id="add-card"></div>
-    <header>
+    <header
+      class="sticky-top"
+      style="
+        background-color: white;
+        background-color: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(30px);
+        box-shadow: 0 1rem 3.5rem rgba(0, 0, 0, 0.1);
+      "
+    >
       <!-- Bootstrap Static Header -->
-      <div class="jumbotron bg-cover text-white border border-white">
+      <div class="jumbotron bg-cover text-white">
         <div class="container pt-5 pb-4 text-center">
           <h1 class="display-4 font-weight-bold col-md-12 text-black">todo.</h1>
           <div id="searchbox" class="col-md-12 ps-3 pe-3 mt-5"></div>
@@ -31,9 +39,14 @@
       </div>
     </header>
 
-    <div class="container">
-      <div class="row justify-content-center">
-        <div id="list"></div>
+    <div
+      class="container-fluid"
+      style="background: linear-gradient(#ffefba, #ffffff)"
+    >
+      <div class="container">
+        <div class="row justify-content-center">
+          <div id="list"></div>
+        </div>
       </div>
     </div>
   </body>
