--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -3,7 +3,7 @@
 <!-- chat open -->
 <div class="d-flex justify-content-end m-3 mb-0">
   <button
-    id="actionButton"
+    id="editButton"
     type="button"
     disabled
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
@@ -12,16 +12,16 @@
     Edit
   </button>
   <button
-    id="actionButton"
+    id="deleteButton"
     type="button"
     disabled
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
-    onclick="buttonClickOn()"
+    onclick="deleteObject()"
   >
     Delete
   </button>
   <button
-    id="actionButton"
+    id="addButton"
     type="button"
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block"
     onclick="modalOnButton();backgroundBlurOn()"
