--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -7,7 +7,7 @@
     type="button"
     disabled
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
-    onclick="buttonClickOn()"
+    onclick="editObject()"
   >
     Edit
   </button>
