--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -1,65 +1,61 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/feat/add-card/assets/add-card.css" />
-    <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-
-    <!-- script  -->
-    <!-- <script src="/feat/store-item/store.js"></script> -->
-    <script src="/feat/add-card/js/input-card.js"></script>
-    <title>Add Card</title>
-  </head>
-  <body>
-    <div class="container-fluid" id="card-wrapper">
-      <div class="row">
-        <div class="col justify-content-center d-flex">
-          <div class="card-input-wrapper">
-            <div class="container">
-              <form id="form" action="">
-                <div class="row">
-                  <div class="todo-title col">
-                    Title <font style="color: red;">*</font>
-                  </div>
-                  <div class="col text-end close">
-                    <button onclick="modalOffButton(); backgroundBlurOff()">
-                      +
-                    </button>
-                  </div>
+<link rel="stylesheet" href="/feat/add-card/assets/add-card.css" />
+<script src="/feat/add-card/js/input-card.js"></script>
+<body>
+  <div class="container-fluid" id="card-wrapper">
+    <div class="row">
+      <div class="col justify-content-center d-flex">
+        <div class="card-input-wrapper col-md-7">
+          <div class="container col-md-12 px-3">
+            <form class="col-md-12" id="form" action="">
+              <div class="row">
+                <div class="todo-title col">
+                  Title <font style="color: red">*</font>
                 </div>
-                <div class="row">
-                  <div class="title-input">
-                    <input type="text" name="title" id="title" required />
-                  </div>
-                </div>
-                <div class="todo-description row">Description</div>
-                <div class="row">
-                  <div class="title-input">
-                    <textarea
-                      name="description"
-                      id="description"
-                      cols="30"
-                      rows="10"
-                    ></textarea>
-                  </div>
-                </div>
-                <div class="row justify-content-end p-3 add-button">
-                  <button class="Add" id="add" disabled onclick="addItem()">
-                    Add
+                <div class="col text-end close">
+                  <button onclick="modalOffButton(); backgroundBlurOff()">
+                    +
                   </button>
                 </div>
-              </form>
-            </div>
+              </div>
+              <div class="row">
+                <div class="title-input">
+                  <input
+                    class="col-md-12"
+                    type="text"
+                    name="title"
+                    id="title"
+                    required
+                  />
+                </div>
+              </div>
+              <div class="todo-description row">Description</div>
+              <div class="row">
+                <div class="title-input">
+                  <textarea
+                    class="col-md-12"
+                    name="description"
+                    id="description"
+                    cols="30"
+                    rows="10"
+                  ></textarea>
+                </div>
+              </div>
+              <div
+                class="col-md-12 row d-flex justify-content-end p-3 add-button col-md-2 btn btn-lg btn-block me-2"
+              >
+                <button
+                  class="Add col-md-2"
+                  id="add"
+                  onclick="addItem()"
+                  disabled
+                >
+                  Add
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</body>
