edit modal completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body style="background: linear-gradient(#ffefba, #ffffff); height: 100vh">
     <div id="add-card"></div>
+    <div id="edit-card"></div>
     <header>
       <!-- Bootstrap Static Header -->
       <div class="jumbotron bg-cover text-white border border-white">
@@ -46,7 +47,7 @@
       $("#list").load("./feat/listview/view.html");
       $("#floatingbutton1").load("./feat/floatingbutton/button.html");
       $("#add-card").load("./feat/add-card/add-card.html");
-      
+      $("#edit-card").load("./feat/edit/edit.html");
     });
   </script>
 </html>
