--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/feat/floatingbutton/button.css" />
 <script src="/feat/add-card/js/input-card.js"></script>
+<script src="/feat/edit/js/edit.js"></script>
 <!-- chat open -->
 <div class="d-flex justify-content-end m-3 mb-0">
   <button
@@ -7,7 +8,7 @@
     type="button"
     disabled
     class="col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
-    onclick="editObject()"
+    onclick="editModalOn()"
   >
     Edit
   </button>
