fix: Use single colour background

--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
       </div>
     </header>
 
-    <div
-      class="container-fluid"
-      style="background: linear-gradient(#ffefba, #ffffff)"
-    >
+    <div class="container-fluid" style="background: #ffefba">
       <div class="container">
         <div id="multi-select"></div>
         <div class="row justify-content-center">
