feat: Add backend db

--- a/index.html
+++ b/index.html
@@ -62,4 +62,5 @@
       $("#add-card").load("./feat/add-card/add-card.html");
     });
   </script>
+  <script src="feat/db/fetch.js"></script>
 </html>
