feat: Add Delete function using DB

--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -4,3 +4,4 @@
 </div>
 <script src="/feat/multiple-selection/selection.js"></script>
 <script src="/feat/listview/view.js"></script>
+<script src="/feat/delete/delete.js"></script>
