--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -25,10 +25,10 @@
   <div class="col-md-8 d-flex justify-content-end">
     <button
       id="deleteButton"
-      type="button"
       disabled
+      type="button"
       class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
-      onclick="buttonClickOn()"
+      onclick="deleteItem(selectedItems)"
     >
       Delete
     </button>
