--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -4,14 +4,14 @@
 <!-- chat open -->
 <div class="d-flex justify-content-between m-3 mb-0">
   <div class="col-md-4 d-flex">
-    <button
+    <input
       id="selectButton"
-      type="button"
+      type="checkbox"
       class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
-      onclick="selectAll()"
-    >
-      Select All
-    </button>
+      onclick="selectOrDeselect()"
+    />
+    <label for="selectButton">Select All</label>
+
     <button
       id="deSelectButton"
       type="button"
