--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -10,7 +10,12 @@
       class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
       onclick="selectOrDeselect()"
     />
-    <label for="selectButton">Select All</label>
+    <label
+      class="col-md-1.5 me-2"
+      for="selectButton"
+      style="color: black; padding: 10px"
+      >Select All</label
+    >
 
     <button
       id="deSelectButton"
