--- a/feat/listview/view.html
+++ b/feat/listview/view.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="/feat/listview/view.css" />
 <div id="cardContainer" class="container mt-5 mb-5">
-  <div class="row"></div>
+  <div class="row">
+    <p id="noResults">No Results Found</p>
+  </div>
 </div>
 <script src="/feat/multiple-selection/selection.js"></script>
 <script src="/feat/listview/view.js"></script>
