--- a/feat/edit/edit.html
+++ b/feat/edit/edit.html
@@ -24,7 +24,7 @@
         <div class="col justify-content-center d-flex">
           <div class="card-input-wrapper">
             <div class="container">
-              <form id="form" action="">
+              <form id="edit-form" action="">
                 <div class="row">
                   <div class="todo-title col">
                     Titles <font style="color: red">*</font>
@@ -52,7 +52,7 @@
                   </div>
                 </div>
                 <div class="row justify-content-end p-3 add-button">
-                  <button class="Add" id="add" disabled onclick="addItem()">
+                  <button class="Add" id="add" onclick="editItem()">
                     Edit
                   </button>
                 </div>
