fix mutliple delete

--- a/feat/floatingbutton/button.html
+++ b/feat/floatingbutton/button.html
@@ -36,7 +36,7 @@
       class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
       onclick="editModalOn()"
     >
-      edit
+      Edit
     </button>
     <button
       id="deleteButton"
