--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>getItDone()</title>
+    <title>Todo</title>
     <!-- <link rel="stylesheet" href="index.css" /> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link
@@ -34,9 +34,7 @@
       <!-- Bootstrap Static Header -->
       <div class="jumbotron bg-cover text-white">
         <div class="container pt-5 pb-4 text-center">
-          <h1 class="display-4 font-weight-bold col-md-12 text-black">
-            getItDone()
-          </h1>
+          <h1 class="display-4 font-weight-bold col-md-12 text-black">Todo</h1>
           <div id="searchbox" class="col-md-12 ps-3 pe-3 mt-5"></div>
           <div id="floatingbutton1"></div>
         </div>
