Change Add Button

--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -40,18 +40,15 @@
                   ></textarea>
                 </div>
               </div>
-              <div
-                class="col-md-12 row d-flex justify-content-end p-3 add-button col-md-2 btn btn-lg btn-block me-2"
+              <button
+                id="add"
+                disabled
+                type="button"
+                class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
+                onclick="addItem()"
               >
-                <button
-                  class="Add col-md-2"
-                  id="add"
-                  onclick="addItem()"
-                  disabled
-                >
-                  Add
-                </button>
-              </div>
+                Add
+              </button>
             </form>
           </div>
         </div>
