--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -40,15 +40,17 @@
                   ></textarea>
                 </div>
               </div>
-              <button
-                id="add"
-                disabled
-                type="button"
-                class="floatButton col-md-1.5 btn btn-outline-secondary btn-lg btn-block me-2"
-                onclick="addItem()"
-              >
-                Add
-              </button>
+              <div class="row justify-content-end p-3">
+                <button
+                  id="add"
+                  disabled
+                  type="button"
+                  class="floatButton col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
+                  onclick="addItem()"
+                >
+                  Add
+                </button>
+              </div>
             </form>
           </div>
         </div>
