--- a/feat/edit/edit.html
+++ b/feat/edit/edit.html
@@ -51,9 +51,14 @@
                     ></textarea>
                   </div>
                 </div>
-                <div class="row justify-content-end p-3 add-button">
-                  <button class="Add" id="add" onclick="editItem()">
-                    Edit
+                <div class="row justify-content-end p-3">
+                  <button
+                    id="add"
+                    type="button"
+                    class="floatButton col-md-1 btn btn-outline-secondary btn-lg btn-block me-2"
+                    onclick="editItem()"
+                  >
+                    Save
                   </button>
                 </div>
               </form>
