--- a/feat/add-card/add-card.html
+++ b/feat/add-card/add-card.html
@@ -10,6 +10,11 @@
               <div class="row">
                 <div class="todo-title col">
                   Title <font style="color: red">*</font>
+                  <font
+                    id="a-exists"
+                    style="display: none; color: red; font-size: x-small"
+                    >Item already exists</font
+                  >
                 </div>
                 <div class="col text-end close">
                   <button onclick="modalOffButton(); backgroundBlurOff()">
